- Fixed a graphical bug that broke lines in the dropdown if the given copy has been too short

--- a/css/eclipsephase.css
+++ b/css/eclipsephase.css
@@ -1807,6 +1807,8 @@ h3.inline {
 .droplistElement,
 .droplistHeader {
   padding: 8px 10px;
+  width: 100%;
+  text-align: right;
 }
 
 .droplistHeader {
